# pathway-figure-ocr

./: .gitignore  .nixpkgs-version.json  CURRENT_DB  DIRENV.md  README.md  TODOS_for_shell.nix.md  codebook.md  copy-tables.sh  copy_all_except_figures.sh  copy_min.sh  copy_tables.sh  copy_xrefs_tables.sh  deadline.py  default.nix  docker.nix  europepmc.py  europepmc_metadata.R  gcv.py  gcv_cli.py  gcv_pmc.py  get_2018.sh  get_all_symbol_chars.py  get_conn.py  get_pg_conn.py  jupyterEnvironment.nix  load_pmc.py  locate.py  mappbuilder.py  match.py  matrix-visualization.R  normalize.py  ocr_pmc.py  parse_pmc_html.py  pfocr-gmt-enrich.R  pfocr.py  pfocr20191102.sh  pfocr_curate.R  pfocr_fetch.R  pfocr_plot.R  pfocr_qc.R  (+19 more)
.github/workflows/: on_gcv_ocr_change.yml
archive/: gen_co_check.sh  gen_co_next.sh
curator/: app.R
custom_pkgs/: requirements.nix  requirements_frozen.txt
database/: README.md  add_cascade.sql  create_tables.sql  gene_counts.sql  get_all_ocr_results.sql  get_image_paths.sql  get_ocr_result.sql  load_data.sql  no_ocr_results.sql  ocr_results_but_no_xrefs.sql  pfocr_xrefs_not_in_wp_hs.sql  results_export.sql  setup.sql  wp_false_positive_hits.sql  xrefs_in_wp_hs_but_not_xrefs_table.sql
demo_notebooks/: rselenium_demo.ipynb  sandbox.py.ipynb
gene_mentions/: README.md  gene_mentions.pegjs  spectrum.json  spectrum.md
gene_mentions/gm/: gm.g4  gmLexer.g4  gmParser.g4  ranges.txt
homoglyphs/: requirements.nix  requirements_frozen.txt
image_preprocessors/: __init__.py  gcv.py  noop.py
lexicon/: 1_symbol.csv  2_bioentities.csv  3_alias_symbol.csv  4_n_prev_symbol.csv  4_prev_symbol.csv  n_alias_symbol.csv  n_bioentities.csv  n_symbol.csv  u_symbol.csv  uf_alias_symbol.csv  uf_prev_symbol.csv  wp-hs-xrefs.csv
nixenvs/: .nixpkgs-version.json
nixenvs/python-modules/: jupyterlab-vim.nix  pyproject.toml  python-with-pkgs.nix  rpy2-3.x-r-libs-site.patch
nixpkgs/confusable-homoglyphs/: default.nix
nixpkgs/homoglyphs/: default.nix
nixpkgs/nb_black/: default.nix
nixpkgs/pyahocorasick/: default.nix
nixpkgs/seaborn/: default.nix
nixpkgs/skosmos_client/: default.nix
nixpkgs/wikidata2df/: default.nix
notebooks/: README.md  ahocorasick_postprocess.ipynb  bte_clustering.ipynb  bte_export.ipynb  bte_export_csv_files.ipynb  bte_sleeve.ipynb  bte_sleeve_A.2_RHOBTB2_twohop.ipynb  bte_sleeve_RAB13.ipynb  bte_sleeve_WAS.ipynb  bte_sleeve_fisher.ipynb  bte_visual_explainer.ipynb  bte_with_pfocr_cooccurrence.ipynb  chemical_intersections.ipynb  demo.dio  gcloudy2  gcv_automl.ipynb  gcv_language_hints_comparison.ipynb  gcv_ocr.ipynb  get_and_analyze_predictions.ipynb  get_figures.ipynb  get_lexicon.ipynb  get_oa_pmc_data.ipynb  get_raw_2019_ocr_data.ipynb  gmt.ipynb  merge_2020_2021.ipynb  pfocr_fetch.R.ipynb  pp_ahocorasick.ipynb  pp_classic.ipynb  pubtator.ipynb  pyproject.toml  rdf2pandas.py  sandbox.R.ipynb  sandbox.py.ipynb  transforms
ocr_engines/: gcv.py
performance/: 20180413_4000_pfocr_sub.csv  20180418_wp_hs_gmt.csv  20180418_wp_hs_pfocr_sub.csv  accumulations.R  clustering.R  heatmaps.R  performance.R
pfocr/: __init__.py  europepmc.py  fast_match_testable.py  get_all_symbol_chars.py  get_pg_conn.py  load_pmc_html.py  locate.py  mappbuilder.py  match.py  match_testable.py  match_testable.test.py  ocr_pmc.py  pfocr.py  resolutions.py  summarize.py  svg2png.py  test_match_testable.py
pfocr-pubtator-pubmed/: venn-by-VennDiagram.R  venn-by-eulerr.R
pfocr/ocr_engines/: __init__.py  gcv.py
pfocr/transforms/: README.md  __init__.py  alphanumeric.py  asciify.py  deburr.py  expand.py  homoglyphs2ascii.py  homoglyphs2ascii.test.py  homoglyphs2symbol_chars.py  nfkc.test.py  noop.py  root.py  shake.py  split.py  split.test.py  test_asciify.py  test_homoglyphs2ascii.py  test_homoglyphs2symbol_chars.py  test_shake.py
pfocr/utils/: hg.py  regexes.py  toolbox.py
scripts/: bte_export.ipynb  pubtator.py
share-src/config/: jupyter_notebook_config.json  jupyter_server_config.json  migrated
shiny-25years/: app.R  author_cleanup.txt  pfocr_annots.rds  pfocr_jensen.rds  pfocr_journals.rds  pfocr_years.rds
shiny-adrd/: app.R  pfocr_adrd_annots.rds  pfocr_adrd_genes.rds  pfocr_adrd_years.rds
shiny-covidpathways/: app.R  pfocr_covid_annots.rds  pfocr_covid_genes.rds  pfocr_covid_table.rds  pfocr_covid_years.rds
shiny-curator/: app.R
shiny-display/: app.R
shiny-screen/: app.R  cord19_pfocr.rds
shiny-screen-images/: app.R
shiny-terpene/: app.R  pfocr_terpene_annots.rds  pfocr_terpene_chems.rds  pfocr_terpene_genes.rds  pfocr_terpene_table.rds  pfocr_terpene_years.rds
shiny-terpeneadh/: app.R  pfocr_terpeneadh_annots.rds  pfocr_terpeneadh_chems.rds  pfocr_terpeneadh_genes.rds  pfocr_terpeneadh_table.rds  pfocr_terpeneadh_years.rds
shiny-terpeneplant/: app.R  pfocr_terpeneplant_annots.rds  pfocr_terpeneplant_chems.rds  pfocr_terpeneplant_genes.rds  pfocr_terpeneplant_table.rds  pfocr_terpeneplant_years.rds
shiny-titles/: app.R  pfocr_curated copy.rds  pfocr_curated.rds  pfocr_curated_bkup.rds
specs/: jupyter_notebook_config.json  jupyter_server_config.json  overrides.json
transforms/: .one2I.py.swp  ALPHA_to_A.py  Ivs1.py  __init__.py  dup.py  expand.py  expand.test.py  expand_discuss.py  homoglyphs2ascii.py  homoglyphs2ascii.test.py  homoglyphs2symbol_chars.py  homoglyphs2symbol_chars.test.py  nfkc.py  one_to_I.py  root.py  split.py  stop.py  swaps.py  upper.py
venn/: venn-by-limma.R
xpm2nix/: README.md  shell.nix
xpm2nix/node-packages/: README.md  labextension.nix  labextensions.nix  node-packages.nix  package-lock.json  package.json  update
xpm2nix/python-modules/: README.md  jupyterlab-vim.nix  jupyterlab-vimrc.nix  pyproject.toml  python-with-pkgs.nix
(+9 files in other folders)
