[tool.poetry]
name = "pathway-figure-ocr-python"
version = "0.1.0"
description = ""
authors = ["Anders Riutta <git@andersriutta.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyterlab = "^3.0.8"

# These failed to install:
# Could not find a version that satisfies the requirement certifi>=2020.06.20
#seaborn = "^0.11.1"
#scipy = "^1.6.1"
#matplotlib = "^3.3.4"
# infinite recursion error
#jupytext = "^1.10.2"

jupyter-lsp = "^1.1.3"
jupyterlab-lsp = "^3.4.1"
python-language-server = "^0.36.2"
rope = "^0.18.0"
pyflakes = "^2.2.0"
mccabe = "^0.6.1"
jupyterlab-code-formatter = "^1.4.4"
black = "^20.8b1"
isort = "^5.7.0"
autopep8 = "^1.5.5"
jupyter-resource-usage = "^0.5.1"
aquirdturtle-collapsible-headings = "^3.0.1"
qbatch = "^2.2.1"
jupyterlab-hide-code = "^3.0.1"
jupyterlab-vim = "^0.13.0"
jupyterlab-vimrc = "^0.5.2"
jupyterlab-drawio = "^0.8.0"
jupyterlab-system-monitor = "^0.8.0"
rpy2 = "^3.4.2"
pydocstyle = "^5.1.1"
pylint = "^2.6.2"
yapf = "^0.30.0"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
jupyter-packaging = "^0.7.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
