[tool.poetry]
name = "pathway-figure-ocr-python"
version = "0.1.0"
description = ""
authors = ["Anders Riutta <git@andersriutta.com>"]

[tool.poetry.dependencies]
#python = "^3.8"
# this tighter range is required by scipy
python = ">=3.8,<3.10"
jupyter = "^1.0.0"
jupyterlab = "^3.0.8"

# These failed to install:
# Could not find a version that satisfies the requirement certifi>=2020.06.20
scipy = "^1.6.2"
#matplotlib = "^3.4.1"
#seaborn = "^0.11.1"

jupyter-lsp = "^1.1.3"
jupyterlab-lsp = "^3.4.1"
python-language-server = "^0.36.2"
rope = "^0.18.0"
pyflakes = "^2.2.0"
mccabe = "^0.6.1"
jupyterlab-code-formatter = "^1.4.10"
black = "^20.8b1"
isort = "^5.7.0"
autopep8 = "^1.5.5"
jupyter-resource-usage = "^0.5.1"
aquirdturtle-collapsible-headings = "^3.0.1"
qbatch = "^2.2.1"
jupyterlab-hide-code = "^3.0.1"
jupyterlab-vim = "^0.13.0"
jupyterlab-vimrc = "^0.5.2"
jupyterlab-drawio = "^0.8.0"
jupyterlab-system-monitor = "^0.8.0"
pydocstyle = "^5.1.1"
pylint = "^2.6.2"
yapf = "^0.30.0"
flake8 = "^3.8.4"
ndex2 = "^3.3.1"
rpy2 = "^3.4.3"
jupytext = "^1.11.0"
confusable_homoglyphs = "^3.2.0"

# archived
#homoglyphs = "^2.0.4"

pyahocorasick = "^1.4.2"
#spacy = "^3.0.5"
Unidecode = "^1.2.0"
python-magic = "^0.4.22"
Wand = "^0.6.6"
Pillow = "^8.2.0"
pyarrow = "^3.0.0"
confusables = "^1.2.0"
spacy = "^3.0.6"
ftfy = "^6.0"
google-api-core = "^1.26.3"
skosmos-client = "^0.3.0"
#wikidata2df = "^0.1.0"

[tool.poetry.dev-dependencies]
jupyter-packaging = "^0.7.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
